{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 71,
  "lineage": "0009aa9f-e16b-1080-cb13-281adc5e1cea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846715253217:vpc/vpc-62cc3b05",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-1d32da74",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e2b8b387",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-62cc3b05",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5d13783a",
            "owner_id": "846715253217",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846715253217:security-group/sg-0071d61d3c1bf4029",
            "description": "Allow Redis inbound traffic from EB Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "To Any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0071d61d3c1bf4029",
            "ingress": [],
            "name": "fibo-web-app-redis",
            "name_prefix": null,
            "owner_id": "846715253217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fibo-web-app-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-62cc3b05"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-431387249",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a2d3cce287756537",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    }
  ]
}